# docs

ffmpeg/: CMakeLists.txt  ffmpeg_test.c
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
数字图像处理/基于MATLAB的图片文字提取和识别/: words.docx  words.mlx
数字图像处理/基于暗原色先验的单幅图像去雾/: demaze.mlx
